# Optimal-Sliced-Latin-Hypercube-Designs

./: .gitignore  CMakeLists.txt  README.md
src/: SLHD.cpp  SLHD.h  SLHD_test.cpp  design.cpp  design.h  manager.cpp  manager.h  manager_test.cpp  utils.h
